Make ts script with JSON import work

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "pv278-weather-advisor",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "data-script": "ts-node ./src/data/script.ts"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -35,10 +37,14 @@
     "workbox-streams": "^6.5.4"
   },
   "devDependencies": {
+    "@types/node-gzip": "^1.1.0",
     "autoprefixer": "^10.4.12",
     "daisyui": "^2.31.0",
+    "got": "^12.5.0",
+    "node-gzip": "^1.1.2",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "ts-node": "^10.9.1"
   },
   "eslintConfig": {
     "extends": [
