--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "data-script": "ts-node ./src/data/script.ts"
+    "downloadCzechStationsData": "ts-node ./src/data/downloadCzechStationsData.ts"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@types/node-gzip": "^1.1.0",
     "autoprefixer": "^10.4.12",
+    "csv-parse": "^5.3.0",
     "daisyui": "^2.31.0",
     "got": "^12.5.0",
     "node-gzip": "^1.1.2",
