--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "pv278-weather-advisor",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -39,8 +38,7 @@
     "autoprefixer": "^10.4.12",
     "daisyui": "^2.31.0",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "ts-node": "^10.9.1"
+    "tailwindcss": "^3.1.8"
   },
   "eslintConfig": {
     "extends": [
