--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "chart.js": "^3.9.1",
+    "chartjs-chart-geo": "^3.9.0",
+    "papaparse": "^5.3.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
@@ -35,6 +39,7 @@
     "workbox-streams": "^6.5.4"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.5",
     "autoprefixer": "^10.4.12",
     "daisyui": "^2.31.0",
     "postcss": "^8.4.16",
