--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "react-scripts test",
     "lint": "eslint src --ext .ts,.tsx --fix",
     "lint:fix": "npm run lint --fix",
-    "eject": "react-scripts eject",
-    "deploy": "npm run build && surge ./build pv278-weather-advisor.surge.sh"
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
