--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -1,9 +1,7 @@
-name: Deploy
+name: Deploy on push to master
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
     branches: [ "master" ]
 
 jobs:
@@ -28,5 +26,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
-      - name: 🚀 Build and Deploy
-        run: npm run deploy
+      - name: Build
+        run: npm run build
+      
+      - name: Deploy
+        run: npx surge ./build pv278-weather-advisor.surge.sh --token ${{ secrets.SURGE_TOKEN }}
