--- a/.github/workflows/pr_preview.yml
+++ b/.github/workflows/pr_preview.yml
@@ -35,10 +35,7 @@ jobs:
         with:
           surge_token: ${{ secrets.SURGE_TOKEN }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          dist: public
-          build: |
-            npm install
-            npm run build
+          dist: build
             
-      - name: Get the preview URL
+      - name: Get preview URL
         run: echo "url => ${{ steps.preview_step.outputs.preview_url }}"
