--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --passWithNoTests",
     "lint": "eslint src --ext .ts,.tsx --fix",
     "lint:fix": "npm run lint --fix",
     "eject": "react-scripts eject"
