--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "react-scripts test --passWithNoTests",
     "lint": "eslint src --ext .ts,.tsx --fix",
     "lint:fix": "npm run lint --fix",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preview-deploy-local": "npm run build && npx http-server build"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
