--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview-deploy-local": "npm run build && npx http-server build"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
