--- a/.github/workflows/pr_preview.yml
+++ b/.github/workflows/pr_preview.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm run build
       
       - name: Deploy
-        uses: afc163/surge-preview@v1
+        uses: petr7555/surge-preview@v1
         id: preview_step
         with:
           surge_token: ${{ secrets.SURGE_TOKEN }}
