--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "workbox-streams": "^6.5.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.12",
     "daisyui": "^2.31.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
