--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview-deploy-local": "npm run build && npx http-server build"
   },
   "dependencies": {
+    "@ahooksjs/use-url-state": "^3.5.0",
     "@auth0/auth0-react": "^1.11.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
