--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -27,7 +27,9 @@ jobs:
         run: npm ci
         
       - name: Build
-        run: npm run build
+        run: |
+          npm run build
+          mv ./build/index.html ./build/200.html
       
       - name: Deploy
         run: npx surge ./build pv278-weather-advisor.surge.sh --token ${{ secrets.SURGE_TOKEN }}
