--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-spring": "^9.5.5",
     "typescript": "^4.8.3",
     "usehooks-ts": "^2.9.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.12",
     "daisyui": "^2.31.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
