--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-ci": "npm run build && mv ./build/index.html ./build/200.html",
     "test": "react-scripts test --passWithNoTests",
     "lint": "eslint src --ext .ts,.tsx --fix",
     "lint:fix": "npm run lint --fix",
