--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -11,24 +11,23 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [ 16.x ]
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-          
+
       - name: Install dependencies
         run: npm ci
         
       - name: Build
-        run: |
-          npm run build-ci
-      
+        run: npm run build-ci
+
       - name: Deploy
         run: npx surge ./build pv278-weather-advisor.surge.sh --token ${{ secrets.SURGE_TOKEN }}
