--- a/.github/workflows/pr_preview.yml
+++ b/.github/workflows/pr_preview.yml
@@ -9,19 +9,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [ 16.x ]
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
 
       - name: Deploy
         uses: petr7555/surge-preview@v3
@@ -31,6 +21,8 @@ jobs:
           surge_domain: pv278-weather-advisor
           github_token: ${{ secrets.GITHUB_TOKEN }}
           build: |
+            npm -v
+            node -v
             npm ci
             npm run build-ci
           dist: build
