--- a/.github/workflows/deploy_master.yml
+++ b/.github/workflows/deploy_master.yml
@@ -23,6 +23,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
+      - name: Log versions
+        run: |
+          npm -v
+          node -v
+        
       - name: Install dependencies
         run: npm ci
         
